--- a/PacmanJesperGreve2019/app/src/main/res/layout/activity_main_menu.xml
+++ b/PacmanJesperGreve2019/app/src/main/res/layout/activity_main_menu.xml
@@ -57,7 +57,7 @@
         android:layout_marginBottom="32dp"
         android:background="@color/colorPrimaryDark"
         android:onClick="ViewHighscore"
-        android:text="@string/Highscore"
+        android:text="@string/ToHighscore"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/controlSwitch"
